# learnig_app_se

./: .gitignore  DESIGN.md  README.md
docs/lessons/: 01-the-client-server-split.md  02-sql-and-the-schema.md  03-the-layered-backend.md  04-auth-sessions-and-cookies.md  05-rest-idempotency-and-optimistic-ui.md  06-observability-and-tracing.md  07-testing-the-stack.md
server/: pyproject.toml
server/app/: deps.py  errors.py  main.py  schemas.py  trace.py
server/app/db/: database.py  seed.py
server/app/db/migrations/: 001_init.sql
server/app/db/repositories/: like_repo.py  post_repo.py  session_repo.py  user_repo.py
server/app/routers/: auth.py  posts.py  users.py
server/app/services/: auth_service.py  post_service.py  user_service.py
server/tests/: conftest.py  test_api.py  test_auth.py  test_feed.py  test_hardening.py  test_posts.py  test_trace.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  main.jsx  styles.css
web/src/components/: AuthForm.jsx  LikeButton.jsx  LikeButton.test.jsx  NavBar.jsx  PostCard.jsx  PostComposer.jsx  PostComposer.test.jsx  XRayPanel.jsx
web/src/context/: AuthContext.jsx  XRayContext.jsx
web/src/pages/: FeedPage.jsx  LoginPage.jsx  ProfilePage.jsx  SignupPage.jsx
